test/files/neg/numeric-add-string-warning.scala
// scalac: -Xfatal-warnings -deprecation
//
object Test {
  val x = 4 + "2"
}
